--- a/map.css
+++ b/map.css
@@ -1,18 +1,16 @@
-
 #map {
-    width: 100%;
-    height: 800px;
-    background: grey;
-      margin: 8px 0;
-      display: inline-block;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
+  width: 100%;
+  height: 800px;
+  background: grey;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .autocomplete {
   position: relative;
-  display: inline-block;
 }
 
 .autocomplete-items {
@@ -33,13 +31,44 @@
   border-bottom: 1px solid #d4d4d4;
 }
 
-/*when hovering an item:*/
 .autocomplete-items div:hover {
   background-color: #e9e9e9;
 }
-
-/*when navigating through the items using the arrow keys:*/
 .autocomplete-active {
   background-color: DodgerBlue !important;
   color: #ffffff;
+}
+
+.wrapper :where(.title, li, li i, .details){
+  display: flex;
+  align-items: center;
+}
+
+ul{
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 12px;
+  padding-top: 10px;
+  margin: 0px;
+  border-radius: 5px;
+}
+ul  li{
+  color: #333;
+  margin: 4px 3px;
+  list-style: none;
+  border-radius: 5px;
+  background: #F2F2F2;
+  padding: 5px 8px 5px 10px;
+  border: 1px solid #e3e1e1;
+}
+ul li i{
+  height: 20px;
+  width: 20px;
+  color: #808080;
+  margin-left: 8px;
+  font-size: 12px;
+  cursor: pointer;
+  border-radius: 50%;
+  background: #dfdfdf;
+  justify-content: center;
 }
