--- a/map.css
+++ b/map.css
@@ -72,3 +72,18 @@ ul li i{
   background: #dfdfdf;
   justify-content: center;
 }
+
+.logo {
+  width: 100px;
+  float:left;
+  margin-left: 30px;
+}
+.disclaimer {
+  padding-left:10px;
+  padding-right:10px;
+  max-width:600px;
+}
+
+.inline {
+  display: inline-block;
+}
