--- a/map.css
+++ b/map.css
@@ -64,12 +64,12 @@ ul  li{
 ul li i{
   height: 20px;
   width: 20px;
-  color: #808080;
+  color: #000;
   margin-left: 8px;
   font-size: 12px;
   cursor: pointer;
   border-radius: 50%;
-  background: #dfdfdf;
+  background: #ff9800;
   justify-content: center;
 }
 
